--- a/css-and-images/styles.css
+++ b/css-and-images/styles.css
@@ -10,14 +10,15 @@ body {
 
 #grid-container {
     display: grid;
-    width: 480px;
-    height: 480px;
-    grid-template-columns: 25% 25% 25% 25%; 
-    grid-template-rows: 25% 25% 25% 25%;
+    width: 500px;
+    height: 500px;
+
 }
+/*Prova a rifare questo in altri modi che non siano grid forse funzionerà*/
+
 
 .square {
-    width: 100%;
-    height: 100%;
     background-color: red;
+    flex: 1 1 auto;
+
 }
