--- a/css-and-images/styles.css
+++ b/css-and-images/styles.css
@@ -1,24 +1,90 @@
 body {
-    background: black;
+    background: #6FCF97;
+}
+
+button {
+    border: 1px solid var(--primary-dark);
+    border-radius: 5px;
+    background-color: #9AE7E2;
+    box-shadow: 2px 2px 0 0 black;
+}
+
+button:active{
+  top: 3px;
+  box-shadow: none;
+}
+
+
+
+
+#main-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 20%;
+    margin-right: 20%;
+}
+
+#game-title{
+    font-style: Inika;
+}
+
+#etch-a-sketch{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+#options{
+    display: flex;
+    flex-direction: column;
+    margin: 20px;
+    align-content: space-between;
+
+}
+
+#grid-size-info{
+    display: flex;
+    flex-direction: column;
+    height: 60%;
+    background-color: #62B082;
+    padding: 10%;
+    margin-bottom: 5%;
+    border-radius: 10px;
+    width: 100px;
+}
+
+#change-grid-size{
+    height: 30%;
+    border-radius: 10px;
+}
+
+#grid-size-text{
+    height: 70%;
+}
+
+#colors-info{
+    height: 30%;
+    background-color: #62B082;
+    padding: 10%;
+    border-radius: 10px;
+    width: 100px;
 }
 
 #grid-border {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 20px;
 }
 
 #grid-container {
     display: grid;
     width: 500px;
     height: 500px;
-
 }
-/*Prova a rifare questo in altri modi che non siano grid forse funzionerà*/
-
 
 .square {
-    background-color: red;
+    background-color: white;
     flex: 1 1 auto;
-
 }
