--- a/css-and-images/styles.css
+++ b/css-and-images/styles.css
@@ -5,8 +5,15 @@ body {
 button {
     border: 1px solid var(--primary-dark);
     border-radius: 5px;
-    background-color: #9AE7E2;
     box-shadow: 2px 2px 0 0 black;
+    font-family: 'Inika', serif;
+    font-weight: bold;
+    border-width:2px;
+    border-top-left-radius:15px;
+    border-top-right-radius:15px;
+    border-bottom-left-radius:15px;
+    border-bottom-right-radius:15px;
+    background:linear-gradient(#6FCF97, #5e8d71);
 }
 
 button:active{
@@ -14,8 +21,9 @@ button:active{
   box-shadow: none;
 }
 
-
-
+.colors{
+    height: 100%;
+}
 
 #main-container{
     display: flex;
@@ -26,7 +34,15 @@ button:active{
 }
 
 #game-title{
-    font-style: Inika;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: 'Inika', serif;
+    font-size: 20px;
+    font-weight: lighter;
+    width: 65%;
+    
+    
 }
 
 #etch-a-sketch{
@@ -40,7 +56,6 @@ button:active{
     flex-direction: column;
     margin: 20px;
     align-content: space-between;
-
 }
 
 #grid-size-info{
@@ -52,6 +67,7 @@ button:active{
     margin-bottom: 5%;
     border-radius: 10px;
     width: 100px;
+    font-family: 'Inika', serif;
 }
 
 #change-grid-size{
@@ -61,9 +77,13 @@ button:active{
 
 #grid-size-text{
     height: 70%;
+    font-size: 140%;
 }
 
 #colors-info{
+    display: flex;
+    flex-direction: column;
+    gap: 10%;
     height: 30%;
     background-color: #62B082;
     padding: 10%;
